It's just a few bits init.